--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "devDependencies": {
     "gh-pages": "^0.12.0",
-    "react-scripts": "0.9.5"
+    "postcss-cli": "^5.0.0",
+    "react-scripts": "0.9.5",
+    "tailwindcss": "^0.4.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build:css": "postcss src/style.css -o src/index.css",
+    "watch:css": "postcss src/style.css -o src/index.css -w",
+    "start": "npm run watch:css & react-scripts start",
+    "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
