--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "html-react-parser": "^0.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-router-dom": "^4.1.1",
-    "xml-js": "^1.6.9"
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
     "gh-pages": "^0.12.0",
