--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
-    "html-react-parser": "^0.6.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-router-dom": "^4.1.1"
+    "html-react-parser": "^0.6.3",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
+    "react-router-dom": "^4.1.1",
+    "tailwindcss": "^0.7.4"
   },
   "devDependencies": {
     "gh-pages": "^0.12.0",
     "postcss-cli": "^5.0.0",
-    "react-scripts": "1.1.4",
-    "tailwindcss": "^0.5.2"
+    "react-scripts": "^2.1.8"
   },
   "scripts": {
     "build:css": "postcss src/style.css -o src/index.css",
@@ -22,5 +22,11 @@
     "build": "npm run build:css && react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
